# Kelpa

./: README.md  Semaphore.hpp  internet.hpp
-kelpa/: CMakeLists.txt  Makefile.win  ReadMe.md  kelpa.dev  kelpa.layout  kelpa_private.h  kelpa_private.rc  kelpa_private.res
-kelpa/Config/: config.json
-kelpa/Examples/: compress.cc  demo
-kelpa/Include/: Head.h
-kelpa/Src/Compress/: Compress.hpp  Huffman.hpp  LZW.hpp  Varint.hpp  ZigZag.hpp
-kelpa/Src/Configure/: Configure.hpp  Updater.hpp  Variable.hpp
-kelpa/Src/Coroutine/: Coroutine.hpp  Generator.hpp
-kelpa/Src/CppJson/: CppJson.hpp  Dump.hpp  Load.hpp  Node.hpp
-kelpa/Src/IOSchedule/: IOSchedule.hpp  Reactor.hpp
-kelpa/Src/Internet/: internet.hpp
-kelpa/Src/Journal/: Event.hpp  Formatter.hpp  Journal.hpp  LoggerAndAppender.hpp  Manager.hpp  OutputLevel.hpp
-kelpa/Src/Serde/: Codec.hpp  Field.hpp  FunctionTraits.hpp  Information.hpp  Prelude.hpp  Serde.hpp  SerdeStream.hpp  Util.hpp  VariableTraits.hpp
-kelpa/Src/Thread/: CASLock.hpp  Executor.hpp  Semaphore.hpp  SpinLock.hpp  Thread.hpp  Timer.hpp
-kelpa/Src/Thread/Sync/: Counter.hpp  HashMap.hpp  List.hpp  MultiMap.hpp  Queue.hpp  Vector.hpp
-kelpa/Src/Utility/: Concepts.hpp  Deferrable.hpp  Error.hpp  Flyweight.hpp  Functions.hpp  Ignore.hpp  Interfaces.hpp  Macros.h  ScopeGuard.hpp  SelfWrap.hpp  Singleton.hpp  StringLiteral.hpp  Torrent.hpp  UniqueAny.hpp  Utility.hpp  VoidGuard.hpp  observer_ptr.hpp
-kelpa/Tests/: test.cc
